Added list-serv content, updated footer

--- a/faq.html
+++ b/faq.html
@@ -334,25 +334,32 @@
       </div>
 
       <div class="container">
-        <div class="row paddedRow justify-content-center">
+        <div class="row paddedTop justify-content-center">
           <div class="col text-center">
-            <h1> Connect with us </h1>
+            <h1> Want to find out more? </h1>
           </div>
         </div>
 
         <div class="row justify-content-center">
           <div class="col-sm-4 text-center">
             <h4>
-              We're happy to take any questions or feedback - email us below!
+              Join our list-serv and receive updates about TestDrive news, events,
+              etc.
+            </h4>
+            <h4>
+              Click the button below and press "Send" to join (leave the
+              message blank).
             </h4>
           </div>
         </div>
 
         <div class="row justify-content-center" style="padding-bottom:2em;">
           <div class="col d-flex justify-content-center">
-            <button type="button" class="nicelyRoundedButton">
-              Contact us
-            </button>
+            <a href="mailto:TESTDRIVE-L-request@cornell.edu?Subject=Join" target="_top">
+              <button type="button" class="nicelyRoundedButton">
+                Sign me up
+              </button>
+            </a>
           </div>
         </div>
       </div>
@@ -360,15 +367,16 @@
 
   <footer class="page-footer footerVerB">
     <div class="container-fluid">
-      <div class="row">
+      <div class="row align-items-center footerRow">
         <div class="col-auto mr-auto">
-          <p>Copyright&copy 2019 Social Media TestDrive</p>
+          <p class="footerLeftItem">Copyright&copy 2019 Social Media TestDrive</p>
         </div>
-        <div class="col-auto">
-          <a href="#" class="footer-link">Link 1</a>
-        </div>
-        <div class="col-auto">
-          <a href="#" class="footer-link">Link 2</a>
+        <div class="col-auto align-items-center">
+          <a href="mailto:socialmediatestdrive@gmail.com" target="_top">
+            <button type="button" class="footerButton">
+              Contact us
+            </button>
+          </a>
         </div>
         <div class="col-auto">
           <a href="#" class="footer-link">Team</a>
@@ -382,6 +390,7 @@
       </div>
     </div>
   </footer>
+
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
