--- a/for_educators.html
+++ b/for_educators.html
@@ -157,15 +157,16 @@
   </main>
   <footer class="page-footer footerVerB">
     <div class="container-fluid">
-      <div class="row">
+      <div class="row align-items-center footerRow">
         <div class="col-auto mr-auto">
-          <p>Copyright&copy 2019 Social Media TestDrive</p>
+          <p class="footerLeftItem">Copyright&copy 2019 Social Media TestDrive</p>
         </div>
-        <div class="col-auto">
-          <a href="#" class="footer-link">Link 1</a>
-        </div>
-        <div class="col-auto">
-          <a href="#" class="footer-link">Link 2</a>
+        <div class="col-auto align-items-center">
+          <a href="mailto:socialmediatestdrive@gmail.com" target="_top">
+            <button type="button" class="footerButton">
+              Contact us
+            </button>
+          </a>
         </div>
         <div class="col-auto">
           <a href="#" class="footer-link">Team</a>
@@ -179,6 +180,7 @@
       </div>
     </div>
   </footer>
+
   <!-- <footer class="footer">
     <p id="footer-text">Social Media TestDrive</p>
     <a id="footer-links" href="terms.html">Terms & Copyright</p>
