--- a/for_parents.html
+++ b/for_parents.html
@@ -138,15 +138,16 @@
 
   <footer class="page-footer footerVerB">
     <div class="container-fluid">
-      <div class="row">
+      <div class="row align-items-center footerRow">
         <div class="col-auto mr-auto">
-          <p>Copyright&copy 2019 Social Media TestDrive</p>
+          <p class="footerLeftItem">Copyright&copy 2019 Social Media TestDrive</p>
         </div>
-        <div class="col-auto">
-          <a href="#" class="footer-link">Link 1</a>
-        </div>
-        <div class="col-auto">
-          <a href="#" class="footer-link">Link 2</a>
+        <div class="col-auto align-items-center">
+          <a href="mailto:socialmediatestdrive@gmail.com" target="_top">
+            <button type="button" class="footerButton">
+              Contact us
+            </button>
+          </a>
         </div>
         <div class="col-auto">
           <a href="#" class="footer-link">Team</a>
@@ -160,6 +161,7 @@
       </div>
     </div>
   </footer>
+
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
