--- a/modules.html
+++ b/modules.html
@@ -713,30 +713,31 @@
   </div>
 </main>
 
-  <footer class="page-footer footerVerB">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-auto mr-auto">
-          <p>Copyright&copy 2019 Social Media TestDrive</p>
-        </div>
-        <div class="col-auto">
-          <a href="#" class="footer-link">Link 1</a>
-        </div>
-        <div class="col-auto">
-          <a href="#" class="footer-link">Link 2</a>
-        </div>
-        <div class="col-auto">
-          <a href="#" class="footer-link">Team</a>
-        </div>
-        <div class="col-auto">
-          <a href="#" class="footer-link">Press</a>
-        </div>
-        <div class="col-auto">
-          <a href="#" class="footer-link">Terms & Copyright</a>
-        </div>
+<footer class="page-footer footerVerB">
+  <div class="container-fluid">
+    <div class="row align-items-center footerRow">
+      <div class="col-auto mr-auto">
+        <p class="footerLeftItem">Copyright&copy 2019 Social Media TestDrive</p>
+      </div>
+      <div class="col-auto align-items-center">
+        <a href="mailto:socialmediatestdrive@gmail.com" target="_top">
+          <button type="button" class="footerButton">
+            Contact us
+          </button>
+        </a>
+      </div>
+      <div class="col-auto">
+        <a href="#" class="footer-link">Team</a>
+      </div>
+      <div class="col-auto">
+        <a href="#" class="footer-link">Press</a>
+      </div>
+      <div class="col-auto">
+        <a href="#" class="footer-link">Terms & Copyright</a>
       </div>
     </div>
-  </footer>
+  </div>
+</footer>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
