--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
     </div>
 
-    <div class="container">
+    <!-- <div class="container">
       <div class="row paddedRow justify-content-center">
         <div class="col text-center">
           <h1> Ready to get started? </h1>
@@ -192,194 +192,53 @@
           </button>
         </div>
       </div>
-    </div>
-
-    <!-- <div class="section2 container">
-      <div class="row justify-content-center">
-        <div class="col">
-          <h1>Learn Essential Skills</h1>
-        </div>
-      </div>
-      <div class="row justify-content-center">
-        <div class="col-sm-6">
-          <p class="caption">Our modules are designed to teach youth about skills for entering
-          social media. Check out a few below!</p>
-        </div>
-      </div>
     </div> -->
 
-      <!-- <div id="moduleCarousel" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#moduleCarousel" data-slide-to="0" class="active"></li>
-          <li data-target="#moduleCarousel" data-slide-to="1" class="active"></li>
-          <li data-target="#moduleCarousel" data-slide-to="2" class="active"></li>
-          <li data-target="#moduleCarousel" data-slide-to="3" class="active"></li>
-          <li data-target="#moduleCarousel" data-slide-to="4" class="active"></li>
-          <li data-target="#moduleCarousel" data-slide-to="5" class="active"></li>
-        </ol>
-        <div class="carousel-inner"> -->
-          <!-- zero -->\
-          <!-- <div class="carousel-item active">
-            <div class="carousel-content-container">
-              <a  href="https://app.socialmediatestdrive.org/intro/safe-posting">
-                <div class="row align-items-center">
-                  <div class="col-sm-6 d-flex justify-content-center">
-                    <div class="carousel-text">
-                      <h3 class="module-title">Is it Private Information?</h3>
-                      <p>This module teaches what is safe to share with different
-                        social media audiences and what kind of information is
-                        inappropriate to share on social media.</p>
-                      <button class="module-button" type="button" onclick="window.location.href = 'modules.html';">
-                        <span id="button-text">Launch</span>
-                      </button>
-                    </div>
-                  </div>
-                  <div class="col-sm-6 d-flex justify-content-center">
-                    <img class="carousel-moduleImage" src="img/placeholder.png" alt="placeholder">
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div> -->
-          <!-- one -->
-          <!-- <div class="carousel-item">
-            <div class="carousel-content-container">
-              <a href="modules.html">
-                <div class="row align-items-center">
-                  <div class="col-sm-6 d-flex justify-content-center">
-                    <div class="carousel-text">
-                      <h3 class="module-title">Shaping Your Digital Footprint</h3>
-                      <p>This module teaches how actions on social media create a
-                         digital footprint and skills to positively shape digital
-                         footprints.</p>
-                      <button class="module-button" type="button" onclick="window.
-                      location.href = 'modules.html';"><span id="button-text">
-                        Launch</span></button>
-                    </div>
-                  </div>
-                  <div class="col-sm-6 d-flex justify-content-center">
-                    <img class="carousel-moduleImage" src="img/placeholder.png" alt="placeholder">
-                  </div>
-                </div>
-
-              </a>
-            </div>
-          </div> -->
-          <!-- two -->
-          <!-- <div class="carousel-item">
-            <div class="carousel-content-container">
-              <a href="modules.html">
-                <div class="row align-items-center">
-                  <div class="col-sm-6 d-flex justify-content-center">
-                    <div class="carousel-text">
-                      <h3 class="module-title">Upstanding to Cyberbullying</h3>
-                      <p>This module teaches how to detect signs of cyberbullying
-                        and how to respond when seeing cyberbullying happening to
-                        others.</p>
-                      <button class="module-button" type="button" onclick="window.
-                      location.href = 'modules.html';"><span id="button-text">
-                        Launch</span></button>
-                      </div>
-                    </div>
-                  <div class="col-sm-6 d-flex justify-content-center">
-                    <img class="carousel-moduleImage" src="img/placeholder.png" alt="placeholder">
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div> -->
-          <!-- three -->
-          <!-- <div class="carousel-item">
-            <div class="carousel-content-container">
-              <a href="modules.html">
-                <div class="row align-items-center">
-                  <div class="col-sm-6 d-flex justify-content-center">
-                    <div class="carousel-text">
-                      <h3 class="module-title">Online Identities</h3>
-                      <p>This module teaches how to manage self-presentation and
-                        how online identities can change with different audiences
-                         on social media.</p>
-                      <button class="module-button" type="button" onclick="window.
-                      location.href = 'modules.html';"><span id="button-text">
-                        Launch</span></button>
-                      </div>
-                    </div>
-                  <div class="col-sm-6 d-flex justify-content-center">
-                    <img class="carousel-moduleImage" src="img/placeholder.png" alt="placeholder">
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div> -->
-          <!-- four -->
-          <!-- <div class="carousel-item">
-            <div class="carousel-content-container">
-              <a href="modules.html">
-                <div class="row align-items-center">
-                  <div class="col-sm-6 d-flex justify-content-center">
-                    <div class="carousel-text">
-                      <h3 class="module-title">Social Media Privacy</h3>
-                      <p>This module teaches how social media sites collect
-                        information about users and offers strategies for
-                        protecting privacy on social media.</p>
-                      <button class="module-button" type="button" onclick="window.
-                      location.href = 'modules.html';"><span id="button-text">
-                        Launch</span></button>
-                      </div>
-                    </div>
-                  <div class="col-sm-6 d-flex justify-content-center">
-                    <img class="carousel-moduleImage" src="img/placeholder.png" alt="placeholder">
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div> -->
-          <!-- five -->
-          <!-- <div class="carousel-item">
-            <div class="carousel-content-container">
-              <a href="modules.html">
-                <div class="row align-items-center">
-                  <div class="col-sm-6 d-flex justify-content-center">
-                    <div class="carousel-text">
-                      <h3 class="module-title">News in Social Media</h3>
-                      <p>This module teaches why fake news exists and how to
-                        identify the telltale signs of fake news on social media.</p>
-                      <button class="module-button" type="button" onclick="window.
-                      location.href = 'modules.html';"><span id="button-text">
-                        Launch</span></button>
-                      </div>
-                    </div>
-                  <div class="col-sm-6 d-flex justify-content-center">
-                    <img class="carousel-moduleImage" src="img/placeholder.png" alt="placeholder">
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div>
+    <div class="container">
+      <div class="row paddedTop justify-content-center">
+        <div class="col text-center">
+          <h1> Want to find out more? </h1>
         </div>
-      </div> -->
-      <!--<a class="carousel-control-prev" href="#moduleCarousel" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#moduleCarousel" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>-->
-    <!-- </div> -->
+      </div>
+
+      <div class="row justify-content-center">
+        <div class="col-sm-4 text-center">
+          <h4>
+            Join our list-serv and receive updates about TestDrive news, events,
+            etc.
+          </h4>
+          <h4>
+            Click the button below and press "Send" to join (leave
+            the message blank).
+          </h4>
+        </div>
+      </div>
+
+      <div class="row justify-content-center" style="padding-bottom:2em;">
+        <div class="col d-flex justify-content-center">
+          <a href="mailto:TESTDRIVE-L-request@cornell.edu?Subject=Join" target="_top">
+            <button type="button" class="nicelyRoundedButton">
+              Sign me up
+            </button>
+          </a>
+        </div>
+      </div>
+    </div>
+
   </main>
 
   <footer class="page-footer footerVerB">
     <div class="container-fluid">
-      <div class="row">
+      <div class="row align-items-center footerRow">
         <div class="col-auto mr-auto">
-          <p>Copyright&copy 2019 Social Media TestDrive</p>
+          <p class="footerLeftItem">Copyright&copy 2019 Social Media TestDrive</p>
         </div>
-        <div class="col-auto">
-          <a href="#" class="footer-link">Link 1</a>
-        </div>
-        <div class="col-auto">
-          <a href="#" class="footer-link">Link 2</a>
+        <div class="col-auto align-items-center">
+          <a href="mailto:socialmediatestdrive@gmail.com" target="_top">
+            <button type="button" class="footerButton">
+              Contact us
+            </button>
+          </a>
         </div>
         <div class="col-auto">
           <a href="#" class="footer-link">Team</a>
