--- a/modules.html
+++ b/modules.html
@@ -440,18 +440,22 @@
               </div>
             </div>
             <div class="card-body">
+              <a href="https://app.socialmediatestdrive.org/intro/cyberbullying" class="card-text" target="_none">
+                This lesson
+              </a>
               <span class="card-text">
-                This lesson teaches how to detect signs of
+                teaches how to detect signs of
                 cyberbullying and how to respond when seeing
                 cyberbullying happening to others.
               </span>
               <br>
               <br>
-              <span class="card-text">
+              <span class="card-text-csAlignment">
                 Aligned Common Sense Education's Digital
-                Citizenship Lesson:
+                Citizenship Lesson: Upstanders and Allies: Taking Action
+                Against Cyberbullying.
                 <a href="https://www.commonsense.org/education/digital-citizenship/lesson/upstanders-and-allies-taking-action-against-cyberbullying" target="_blank">
-                  Upstanders and Allies: Taking Action Against Cyberbullying
+                  Learn more...
                 </a>
               </span>
             </div>
@@ -470,18 +474,21 @@
               </div>
             </div>
             <div class="card-body">
+              <a href="https://app.socialmediatestdrive.org/intro/safe-posting" class="card-text" target="_none">
+                This lesson
+              </a>
               <span class="card-text">
-                This lesson teaches what is safe to share with
+                teaches what is safe to share with
                 different social media audiences and what
                 information is inappropriate to share.
               </span>
               <br>
               <br>
-              <span class="card-text">
+              <span class="card-text-csAlignment">
                 Aligned with Common Sense Education's Digital
-                Citizenship lesson:
+                Citizenship lesson: Chatting Safely Online.
                 <a href="https://www.commonsense.org/education/digital-citizenship/lesson/chatting-safely-online"  target="_blank">
-                  Chatting Safely Online
+                  Learn more...
                 </a>
               </span>
             </div>
@@ -500,21 +507,22 @@
               </div>
             </div>
             <div class="card-body">
+              <a href="https://app.socialmediatestdrive.org/intro/digfoot" class="card-text" target="_none">
+                This lesson
+              </a>
               <span class="card-text">
-                This lesson teaches how actions on social media
+                teaches how actions on social media
                 create a digital footprint and skills to positively
                 shape digital footprints.
               </span>
               <br>
               <br>
-              <span class="card-text">
-                <span class="card-text">
-                  Aligned with Common Sense Education's Digital
-                  Citizenship lesson:
-                  <a href="https://www.commonsense.org/education/digital-citizenship/lesson/social-media-and-digital-footprints-our-responsibilities" target="_blank">
-                    Social Media and Digital Footprints
-                  </a>
-                </span>
+              <span class="card-text-csAlignment">
+                Aligned with Common Sense Education's Digital
+                Citizenship lesson: Social Media and Digital Footprints.
+                <a href="https://www.commonsense.org/education/digital-citizenship/lesson/social-media-and-digital-footprints-our-responsibilities" target="_blank">
+                  Learn more...
+                </a>
               </span>
             </div>
           </div>
@@ -532,21 +540,22 @@
               </div>
             </div>
             <div class="card-body">
+              <a href="https://app.socialmediatestdrive.org/intro/presentation" class="card-text" target="_none">
+                This lesson
+              </a>
               <span class="card-text">
-                This lesson teaches how to manage self-presentation
+                teaches how to manage self-presentation
                 and how online identities can change with
                 different audiences.
               </span>
               <br>
               <br>
-              <span class="card-text">
-                <span class="card-text">
-                  Aligned with Common Sense Education's Digital
-                  Citizenship lesson:
-                  <a href="https://www.commonsense.org/education/digital-citizenship/lesson/who-are-you-online" target="_blank">
-                    Who Are You Online?
-                  </a>
-                </span>
+              <span class="card-text-csAlignment">
+                Aligned with Common Sense Education's Digital
+                Citizenship lesson: Who Are You Online?
+                <a href="https://www.commonsense.org/education/digital-citizenship/lesson/who-are-you-online" target="_blank">
+                  Learn more...
+                </a>
               </span>
             </div>
           </div>
@@ -562,21 +571,22 @@
               </div>
             </div>
             <div class="card-body">
+              <a href="https://app.socialmediatestdrive.org/intro/privacy" class="card-text" target="_none">
+                This lesson
+              </a>
               <span class="card-text">
-                This lesson teaches how social media sites collect
+                teaches how social media sites collect
                 information about users and offers strategies for
                 protecting privacy.
               </span>
               <br>
               <br>
-              <span class="card-text">
-                <span class="card-text">
-                  Aligned with Common Sense Education's Digital
-                  Citizenship lesson:
-                  <a href="https://www.commonsense.org/education/digital-citizenship/lesson/being-aware-of-what-you-share" target="_blank">
-                    Being Aware of What You Share
-                  </a>
-                </span>
+              <span class="card-text-csAlignment">
+                Aligned with Common Sense Education's Digital
+                Citizenship lesson: Being Aware of What You Share.
+                <a href="https://www.commonsense.org/education/digital-citizenship/lesson/being-aware-of-what-you-share" target="_blank">
+                  Learn more...
+                </a>
               </span>
             </div>
           </div>
@@ -594,21 +604,22 @@
               </div>
             </div>
             <div class="card-body">
+              <a href="https://app.socialmediatestdrive.org/intro/digital-literacy" class="card-text" target="_none">
+                This lesson
+              </a>
               <span class="card-text">
-                This lesson teaches why fake news exists and how to
+                teaches why fake news exists and how to
                 identify the telltale signs of fake news on social
                 media.
               </span>
               <br>
               <br>
-              <span class="card-text">
-                <span class="card-text">
-                  Aligned with Common Sense Education's Digital
-                  Citizenship lesson:
-                  <a href="https://www.commonsense.org/education/digital-citizenship/lesson/finding-credible-news" target="_blank">
-                    Finding Credible News
-                  </a>
-                </span>
+              <span class="card-text-csAlignment">
+                Aligned with Common Sense Education's Digital
+                Citizenship lesson: Finding Credible News.
+                <a href="https://www.commonsense.org/education/digital-citizenship/lesson/finding-credible-news" target="_blank">
+                  Learn more...
+                </a>
               </span>
             </div>
           </div>
@@ -624,19 +635,20 @@
               </div>
             </div>
             <div class="card-body">
+              <a href="https://app.socialmediatestdrive.org/intro/targeted" class="card-text" target="_none">
+                This lesson
+              </a>
               <span class="card-text">
-                This lesson teaches ...
+                teaches ...
               </span>
               <br>
               <br>
-              <span class="card-text">
-                <span class="card-text">
-                  Aligned with Common Sense Education's Digital
-                  Citizenship lesson:
-                  <a href="" target="_blank">
-                    Link Name
-                  </a>
-                </span>
+              <span class="card-text-csAlignment">
+                Aligned with Common Sense Education's Digital
+                Citizenship lesson: Link name.
+                <a href="" target="_blank">
+                  Learn more...
+                </a>
               </span>
             </div>
           </div>
@@ -654,19 +666,20 @@
               </div>
             </div>
             <div class="card-body">
+              <a href="https://app.socialmediatestdrive.org/intro/habits" class="card-text" target="_none">
+                This lesson
+              </a>
               <span class="card-text">
-                This lesson teaches ...
+                teaches ...
               </span>
               <br>
               <br>
-              <span class="card-text">
-                <span class="card-text">
-                  Aligned with Common Sense Education's Digital
-                  Citizenship lesson:
-                  <a href="" target="_blank">
-                    Link Name
-                  </a>
-                </span>
+              <span class="card-text-csAlignment">
+                Aligned with Common Sense Education's Digital
+                Citizenship lesson: Link name.
+                <a href="" target="_blank">
+                  Learn more...
+                </a>
               </span>
             </div>
           </div>
@@ -682,19 +695,20 @@
               </div>
             </div>
             <div class="card-body">
+              <a href="https://app.socialmediatestdrive.org/intro/phishing" class="card-text" target="_none">
+                This lesson
+              </a>
               <span class="card-text">
-                This lesson teaches ...
+                teaches ...
               </span>
               <br>
               <br>
-              <span class="card-text">
-                <span class="card-text">
-                  Aligned with Common Sense Education's Digital
-                  Citizenship lesson:
-                  <a href="" target="_blank">
-                    Link Name
-                  </a>
-                </span>
+              <span class="card-text-csAlignment">
+                Aligned with Common Sense Education's Digital
+                Citizenship lesson: Link name.
+                <a href="" target="_blank">
+                  Learn more...
+                </a>
               </span>
             </div>
           </div>
