Added terms link to footer, updated educator guide

--- a/faq.html
+++ b/faq.html
@@ -378,7 +378,7 @@
           <a href="#" class="footer-link">Press</a>
         </div>
         <div class="col-auto">
-          <a href="#" class="footer-link">Terms & Copyright</a>
+          <a href="terms.html" class="footer-link">Terms & Copyright</a>
         </div>
         <div class="col-auto align-items-center">
           <a href="mailto:socialmediatestdrive@gmail.com" target="_top">
