--- a/for_educators.html
+++ b/for_educators.html
@@ -66,10 +66,11 @@
             literacy curriculum for their students. Moduels are aligned with
             Common Sense Education's curriculum.
           </h4>
-          <button type="button" class="nicelyRoundedButton"
-          onclick="document.location='testdriveguide.pdf'" target="_blank">
-            Get the educator guide
-          </button>
+          <a href="testdriveguide.pdf">
+            <button type="button" class="nicelyRoundedButton">
+              Get the educator guide
+            </button>
+          </a>
         </div>
         <div class='col-md-6'>
           <img class="educators_image" src="img/educators_1.svg">
@@ -168,7 +169,7 @@
           <a href="#" class="footer-link">Press</a>
         </div>
         <div class="col-auto">
-          <a href="#" class="footer-link">Terms & Copyright</a>
+          <a href="terms.html" class="footer-link">Terms & Copyright</a>
         </div>
         <div class="col-auto align-items-center">
           <a href="mailto:socialmediatestdrive@gmail.com" target="_top">
