--- a/modules.html
+++ b/modules.html
@@ -77,43 +77,37 @@
         </div>
       </div>
 
-      <!-- previous and next buttons for the carousel -->
+      <!-- Pagination for the carousel -->
       <div class="row align-items-center justify-content-center" style="height:70px !important;">
-        <div class="col-4 text-center d-none d-md-block">
-          <a href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <div class="container">
-              <div class="customCarouselControls">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              </div>
-            </div>
-            <span class="sr-only">Previous</span>
-          </a>
-        </div>
-        <div class="col-4 text-center d-none d-md-block">
-          <a href="#carouselExampleIndicators" role="button" data-slide="next">
-            <div class="container">
-              <div class="customCarouselControls">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              </div>
-            </div>
-            <span class="sr-only">Next</span>
-          </a>
-          <!-- <a href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a> -->
-        </div>
+
+          <nav aria-label="Page navigation example" class="d-none d-md-block">
+            <ol class="pagination">
+              <li class="page-item">
+                <a class="page-link" role="button" href="#carouselExampleIndicators" data-slide="prev">
+                  <span aria-hidden="true">&lsaquo;</span>
+                  <span class="sr-only">Previous</span>
+                </a>
+              </li>
+              <li class="page-item pageBlankOf">
+                <span>Page <span id="pageNumber">1</span>
+                 of 2</span>
+              </li>
+              <li class="page-item">
+                <a class="page-link" role ="button" href="#carouselExampleIndicators" data-slide="next">
+                  <span aria-hidden="true">&rsaquo;</span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </li>
+            </ol>
+          </nav>
+
       </div>
 
-      <!-- tablet and fullscreen view -->
+      <!-- Carousel, tablet and fullscreen view -->
       <div class="row d-none d-md-block" style="min-height:1024px;">
         <div class="col">
-          <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="false">
-            <!-- <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-            </ol> -->
+          <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="false" data-wrap="false">
+
             <div class="carousel-inner">
 
               <!-- page 1 -->
@@ -777,6 +771,11 @@
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
+  <!-- Pagination script, do not edit -->
+  <script>
+    $('#carouselExampleIndicators').on('slide.bs.carousel', function(e){
+      $("#pageNumber").text(e.to + 1);
+    });
+  </script>
 </body>
 </html>
